Added very basic route in preparation for implementing a database with conversations stored.
