# express/src/routes/api/v1/index.ts
@@ -1,10 +1,31 @@
 import express from 'express';
 import botRouter from './bot';
+import conversationRouter from './conversation';
 const router = express.Router();
 
 router.use("/bot", botRouter
     /*
         #swagger.tags = ['Bot']
+        
+        #swagger.responses[400] = {
+            description: "Bad request",
+            schema: {
+                $ref: "#/definitions/ErrorResponse"
+            }
+        }
+
+        #swagger.responses[500] = {
+            description: "Internal server error",
+            schema: {
+                $ref: "#/definitions/ErrorResponse"
+            }
+        }
+    */
+);
+
+router.use("/conversation", conversationRouter
+    /*
+        #swagger.tags = ['Conversation']
         
         #swagger.responses[400] = {
             description: "Bad request",
